Possible fix for tap delay on mobile
resolves #34

--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,7 @@
+html {
+  touch-action: manipulation;
+}
+
 html, body {
   max-width: 100%;
   overflow-x: hidden;
